k3s-userapps/riven/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: riven
  namespace: riven
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: riven
  template:
    metadata:
      labels:
        app: riven
    spec:
      containers:
        - name: riven
          image: spoked/riven:latest
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: data
              mountPath: /riven/data
            - name: media
              mountPath: /mnt/media
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: riven-data
        - name: media
          persistentVolumeClaim:
            claimName: video
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: riven-db
  namespace: riven
spec:
  replicas: 1
  selector:
    matchLabels:
      app: riven-db
  template:
    metadata:
      labels:
        app: riven-db
    spec:
      containers:
        - name: postgres
          image: postgres:17-alpine
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: riven-db
