k3s-userapps/riven/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: riven
  namespace: riven
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: riven
---
apiVersion: v1
kind: Service
metadata:
  name: riven-db
  namespace: riven
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: riven-db
